--- a/Sonic3/Sonic3/Sonic3/Sonic3.csproj
+++ b/Sonic3/Sonic3/Sonic3/Sonic3.csproj
@@ -107,6 +107,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animation\AllAnimationSonic.cs" />
+    <Compile Include="Animation\Animation.cs" />
+    <Compile Include="Animation\AnimationPlayer.cs" />
     <Compile Include="Classe sécurisée\BackGroundTexture.cs" />
     <Compile Include="Classe sécurisée\Checkpoint.cs" />
     <Compile Include="Classe sécurisée\CodeExclusifSonic.cs" />
@@ -130,15 +133,21 @@
     <Compile Include="Classe sécurisée\Tele.cs" />
     <Compile Include="Classe sécurisée\TexteFinAnim.cs" />
     <Compile Include="Classe sécurisée\Tremplin.cs" />
+    <Compile Include="Collision\ObjCollisionable.cs" />
+    <Compile Include="Helpers\RectangleHelper.cs" />
+    <Compile Include="Input\KeyboardHelper.cs" />
     <Compile Include="Niveau\cAngelIsland.cs" />
     <Compile Include="Niveau\cAngelIslandP2.cs" />
     <Compile Include="Niveau\cIntro.cs" />
     <Compile Include="Niveau\cMainMenu.cs" />
     <Compile Include="Niveau\cTransition1.cs" />
-    <Compile Include="Test unitaire\cTest.cs" />
+    <Compile Include="Player\PlayerSonic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classe sécurisée\Program.cs" />
     <Compile Include="Niveau\cGame1.cs" />
+    <Compile Include="Ressource\RessourceSonic3.cs" />
+    <Compile Include="UI\Camera.cs" />
+    <Compile Include="UI\GameScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
@@ -146,10 +155,6 @@
     <Content Include="Sonic.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\GameLibrairie\MyGameLibrairy\MyGameLibrairy\MyGameLibrairy.csproj">
-      <Project>{871ED0E8-7B95-4D5A-BC24-F7409C91026E}</Project>
-      <Name>MyGameLibrairy</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Sonic3Content\Sonic3Content.contentproj">
       <Name>Sonic3Content</Name>
       <XnaReferenceType>Content</XnaReferenceType>
