Removed Sonic3 nameSpace

--- a/Sonic3/Sonic3/Sonic3/Sonic3.csproj
+++ b/Sonic3/Sonic3/Sonic3/Sonic3.csproj
@@ -110,29 +110,29 @@
     <Compile Include="Animation\AllAnimationSonic.cs" />
     <Compile Include="Animation\Animation.cs" />
     <Compile Include="Animation\AnimationPlayer.cs" />
-    <Compile Include="Classe sécurisée\BackGroundTexture.cs" />
-    <Compile Include="Classe sécurisée\Checkpoint.cs" />
+    <Compile Include="UI\BackGroundTexture.cs" />
+    <Compile Include="Object\Checkpoint.cs" />
     <Compile Include="Classe sécurisée\CodeExclusifSonic.cs" />
-    <Compile Include="Classe sécurisée\CollisionLoading.cs" />
-    <Compile Include="Classe sécurisée\DessinOBJECT.cs" />
-    <Compile Include="Classe sécurisée\FireBreath.cs" />
-    <Compile Include="Classe sécurisée\Flag.cs" />
+    <Compile Include="Collision\CollisionLoading.cs" />
+    <Compile Include="UI\DessinOBJECT.cs" />
+    <Compile Include="Ennemies\FireBreath.cs" />
+    <Compile Include="Object\Flag.cs" />
     <Compile Include="Classe sécurisée\GestionExterne.cs" />
-    <Compile Include="Classe sécurisée\HUD.cs" />
-    <Compile Include="Classe sécurisée\Loop.cs" />
-    <Compile Include="Classe sécurisée\Menu.cs" />
-    <Compile Include="Classe sécurisée\ObjectMapping.cs" />
-    <Compile Include="Classe sécurisée\Parallax.cs" />
-    <Compile Include="Classe sécurisée\Pente.cs" />
-    <Compile Include="Classe sécurisée\Pic.cs" />
-    <Compile Include="Classe sécurisée\Rhinobot.cs" />
-    <Compile Include="Classe sécurisée\Ring.cs" />
+    <Compile Include="UI\HUD.cs" />
+    <Compile Include="Collision\Loop.cs" />
+    <Compile Include="UI\Menu.cs" />
+    <Compile Include="Object\ObjectMapping.cs" />
+    <Compile Include="UI\Parallax.cs" />
+    <Compile Include="Object\Pente.cs" />
+    <Compile Include="Object\Pic.cs" />
+    <Compile Include="Ennemies\Rhinobot.cs" />
+    <Compile Include="Object\Ring.cs" />
     <Compile Include="Classe sécurisée\SaveCheckPoint.cs" />
-    <Compile Include="Classe sécurisée\Shield.cs" />
-    <Compile Include="Classe sécurisée\SingeArticuler.cs" />
-    <Compile Include="Classe sécurisée\Tele.cs" />
-    <Compile Include="Classe sécurisée\TexteFinAnim.cs" />
-    <Compile Include="Classe sécurisée\Tremplin.cs" />
+    <Compile Include="Power\Shield.cs" />
+    <Compile Include="Ennemies\SingeArticuler.cs" />
+    <Compile Include="Object\Tele.cs" />
+    <Compile Include="UI\TexteFinAnim.cs" />
+    <Compile Include="Object\Tremplin.cs" />
     <Compile Include="Collision\ObjCollisionable.cs" />
     <Compile Include="Helpers\RectangleHelper.cs" />
     <Compile Include="Input\KeyboardHelper.cs" />
