--- a/Sonic3/Sonic3/Sonic3/Sonic3.csproj
+++ b/Sonic3/Sonic3/Sonic3/Sonic3.csproj
@@ -124,6 +124,7 @@
     <Compile Include="UI\Menu.cs" />
     <Compile Include="Object\ObjectMapping.cs" />
     <Compile Include="UI\Object\Sonic3Emblem.cs" />
+    <Compile Include="UI\Object\SonicMainTitle.cs" />
     <Compile Include="UI\Object\TailPlaneMainTitle.cs" />
     <Compile Include="UI\Parallax.cs" />
     <Compile Include="Object\Pente.cs" />
