--- a/Sonic3/Sonic3/Sonic3/Sonic3.csproj
+++ b/Sonic3/Sonic3/Sonic3/Sonic3.csproj
@@ -120,6 +120,8 @@
     <Compile Include="Ennemies\FireBreath.cs" />
     <Compile Include="Object\Flag.cs" />
     <Compile Include="Classe sécurisée\GestionExterne.cs" />
+    <Compile Include="UI\Screen\EScreen.cs" />
+    <Compile Include="UI\Screen\GameScreenManager.cs" />
     <Compile Include="UI\HUD.cs" />
     <Compile Include="Collision\Loop.cs" />
     <Compile Include="UI\Menu.cs" />
@@ -137,6 +139,7 @@
     <Compile Include="Ennemies\SingeArticuler.cs" />
     <Compile Include="Object\Tele.cs" />
     <Compile Include="UI\Object\SegaSplashScreen.cs" />
+    <Compile Include="UI\Screen\ScreenClassFactory.cs" />
     <Compile Include="UI\TexteFinAnim.cs" />
     <Compile Include="Object\Tremplin.cs" />
     <Compile Include="Collision\ObjCollisionable.cs" />
